--- a/login.html
+++ b/login.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <h1>タイトル</h1>
     <form name="loginForm">
       メールアドレス:<input type="email" name="m" id="email_address" />
       パスワード:<input type="password" name="p" id="password" />
-      <input type="button" id="login" name="send" value="ログイン" />
+      <input type="button" id="login" name="send" value="【ログインする】" />
     </form>
   </body>
   <script src="login.js"></script>
